[package]
name = "model-conversion-wizard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["derive"] }
cyrly = "0.1.0"
ggml-sys = { git = "https://github.com/rustformers/llm", version = "0.1.1" }
memmap2 = "0.5.10"
repugnant-pickle = { git = "https://github.com/KerfuffleV2/repugnant-pickle/", version = "0.0.1" }
safetensors = "0.3.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
